...
        )?.clamp(1, 1000000) ??
        5000,
    userRedemptionLimit:
        jsonIntOrNull(
          json['invite_link_max_redemptions_limit_users'],
        )?.clamp(1, 1000000) ??
        10,
  );

  final bool allowEmail;
  final int expiryDays;
  final int staffRedemptionLimit;
  final int userRedemptionLimit;
...
